Rebrand to LessonGo and remove Marketplace component
- Update app title and meta description from "Royal Institute" to "LessonGo" in dist/index.html and index.html to reflect new branding
- Remove Marketplace feature: delete Components/Marketplace.tsx and its usage in App.tsx to simplify navigation and codebase
- Minor adjustments in related components and data imports to align with removal

--- a/my-app/index.html
+++ b/my-app/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="/SCHOOL LOGO.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Royal Institute web app" />
-    <title>Royal Institute</title>
+    <meta name="description" content="LessonGo web app" />
+    <title>LessonGo</title>
   </head>
   <body>
     <noscript>Welcome!</noscript>
